src/test/ui/regions/regions-return-stack-allocated-vec.stderr
error[E0515]: cannot return reference to temporary value
  --> $DIR/regions-return-stack-allocated-vec.rs:4:5
   |
LL |     &[x]
   |     ^---
   |     ||
   |     |temporary value created here
   |     returns a reference to data owned by the current function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
